--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="profile-pic">
-            <img src="thumbnail.png" alt="Joe Greyson">
+            <img src="./images/thumbnail.png" alt="Joe Greyson">
         </div>
     </section>
     <section id="about">
@@ -40,55 +40,44 @@
         <h2>Projects</h2>
         <div class="projects">
             <div class="project">
-                <img src="Screenshot (30).png" alt="Project 1">
+                <img src="./images/Screenshot (30).png" alt="Project 1">
                 <h3>Myntra Clone</h3>
                 <p>Short description of the project goes here. It can be a summary of the technologies used and the main features.</p>
                 <a href="files/project1.zip" class="btn download" download>Download Project</a>
             </div>
             <div class="project">
-                <img src="Screenshot (32).png" alt="Project 2">
+                <img src="./images/Screenshot (32).png" alt="Project 2">
                 <h3>Amazon Clone</h3>
                 <p>Short description of the project goes here. It can be a summary of the technologies used and the main features.</p>
                 <a href="files/project2.zip" class="btn download" download>Download Project</a>
             </div>
             <div class="project">
-                <img src="Screenshot (33).png" alt="Project 3">
+                <img src="./images/Screenshot (50).png" alt="Project 3">
                 <h3>Project Title 3</h3>
                 <p>Short description of the project goes here. It can be a summary of the technologies used and the main features.</p>
                 <a href="files/project3.zip" class="btn download" download>Download Project</a>
             </div>
             <div class="project">
-                <img src="Screenshot (34).png" alt="Project 3">
+                <img src="./images/Screenshot (34).png" alt="Project 3">
                 <h3>Project Title 3</h3>
                 <p>Short description of the project goes here. It can be a summary of the technologies used and the main features.</p>
                 <a href="files/project3.zip" class="btn download" download>Download Project</a>
             </div>
             <div class="project">
-                <img src="Screenshot (35).png" alt="Project 3">
+                <img src="./images/images.png" alt="Project 3">
                 <h3>Project Title 3</h3>
                 <p>Short description of the project goes here. It can be a summary of the technologies used and the main features.</p>
                 <a href="files/project3.zip" class="btn download" download>Download Project</a>
             </div>
             <div class="project">
-                <img src="Screenshot (38).png" alt="Project 3">
+                <img src="./images/Screenshot (38).png" alt="Project 3">
                 <h3>Project Title 3</h3>
                 <p>Short description of the project goes here. It can be a summary of the technologies used and the main features.</p>
                 <a href="files/project3.zip" class="btn download" download>Download Project</a>
             </div>
         </div>
     </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <form id="contact-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </section>
+
     <footer>
         <div class="social">
             <a href="#"><i class="fab fa-linkedin"></i></a>
