--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="profile-pic">
-            <img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg" alt="Joe Greyson">
+            <img src="">
         </div>
     </section>
     <section id="about">
